Fixed datepickers z-index (#191)

--- a/src/components/CustomFormFields/Dateinputs/CustomDateTime.scss
+++ b/src/components/CustomFormFields/Dateinputs/CustomDateTime.scss
@@ -3,6 +3,9 @@
 }
 
 .custom-date-time-input {
+    .react-datepicker-popper {
+        z-index: 2;
+    }
     justify-content: space-between;
     display: flex;
     @media only screen and (max-width: 1200px) {
